mark table caption for layout if needed.

BUG: 133001


svn path=/branches/KDE/3.5/kdelibs/; revision=577316